@@ -1,3 +1,10 @@
+2006-07-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Fixed detection of SysV IPC shared memory and made anonymous mmap 
+          the first selected type. This makes the behaviour of rc1 the 
+          default. anonymous mmap doens't have the problem of shmmax. SysVIPC is 
+          still available!
+
 2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Fixed project files for win32 and made the debug version build again.
